# stl-thumb-kde

./: CMakeLists.txt  README.md  stlcreator.cpp  stlcreator.h  stlthumbnail.desktop  stlthumbnail.json
.github/workflows/: cmake.yml
